<resources>
    <string name="app_name">MobileComputingProject</string>


    <string name="exit">Exit ?</string>
    <string name="exit_msg">Are you sure you want to exit ?</string>

    <string name="create_acc_wrng_msg_1">There already is an account on this device.</string>
    <string name="create_acc_wrng_msg_2">Creating a new account will result in the loss of all previously saved data on this app.</string>
    <string name="create_acc_missing_pass">The password is missing.</string>
    <string name="create_acc_pass_mismatch">The passwords entered do not match.</string>
    <string name="create_acc_missing_username">The username is missing.</string>
    <string name="create_acc_too_long_username">The username is too long.</string>
    <string name="wrng_continue">Do you want to continue?</string>

    <string name="ok">OK</string>
    <string name="warning">Warning !</string>
    <string name="cancel">CANCEL</string>
    <string name="password">Password</string>
    <string name="username">Username</string>
    <string name="sign_in">Sign In</string>
    <string name="sign_up">Sign Up</string>
    <string name="create_your_account">Create your account !</string>
    <string name="autofill_username">Autofill username</string>
    <string name="wrong_pass_error">Incorrect password.</string>
    <string name="wrong_username_error">Incorrect username.</string>

    <string name="there_are_currently_no_reminders">There are currently no reminders.</string>

    <string name="popup_message_confirmation_delete_account">Are you sure you want to delete your account?</string>
    <string name="popup_message_choice_yes">Yes !</string>
    <string name="popup_message_choice_no">No</string>
    <string name="mettre_jour_les_donn_es">Update data</string>
    <string name="good_night">Good Night !</string>
    <string name="good_day">Good Day !</string>
    <string name="good_morning">Good Morning !</string>
    <string name="authentication_error">"Authentication error : "</string>
    <string name="authentication_failed">Authentication failed</string>
    <string name="biometric_authentication">Biometric authentication</string>
    <string name="login_using_fingerprint">Login using fingerprint authentication</string>
    <string name="use_password">Use Password</string>
    <string name="invalid_time">Invalid time</string>
    <string name="reminder_added">Reminder added</string>
    <string name="reminders">" reminders"</string>
    <string name="reminder">" reminder"</string>
    <string name="number_of_reminders">Number of reminders</string>
    <string name="date_and_time">Date and Time</string>
    <string name="message">Message</string>
    <string name="add_reminder">Add reminder</string>
    <string name="update_reminder">Update reminder</string>
    <string name="data_updated">Updated data</string>
    <string name="sure_exit_before_save">Are you sure you want to leave without registering?</string>
    <string name="delete_account">Delete my account</string>
    <string name="log_out">Log out</string>
    <string name="add_date_before_validate">You must add a date or a location before validating</string>
    <string name="add_message_before_validate">You must add a message before validating</string>
    <string name="no_data_to_update">No data to update</string>
    <string name="return_to_loginmenu">You will be logged out and then returned to the login screen</string>
    <string name="reminder_not_added">Reminder not added</string>
    <string name="reminders_delete_all_wrng_msg_1">You\'re about to delete all reminders saved on this device.</string>
    <string name="reminders_editor_choose_display_mode">Choose a reminder display mode</string>
    <string name="reminders_editor_choose_display_order">Choose a reminder display order</string>
    <string name="reminders_was_deleted">\" was deleted !</string>
    <string name="undo">UNDO</string>
    <string name="delete">Delete</string>
    <string name="add_picture_before_validate">You must add a picture before validating</string>
    <string name="created_on">"Created on : "</string>
    <string name="add_notification">Add a notification ?</string>
    <string name="show_all_reminders">Show all reminders</string>
    <string name="every_day_notification">Every day</string>
    <string name="title_activity_maps" translatable="false">MapsActivity</string>

    <string name="geofence_unknown_error">Unknown error: the Geofence service is not available now.</string>
    <string name="geofence_not_available">Geofence service is not available now. Go to Settings>Location>Mode and choose High accuracy.</string>
    <string name="geofence_too_many_geofences">Your app has registered too many geofences.</string>
    <string name="geofence_too_many_pending_intents">You have provided too many PendingIntents to the addGeofences() call.</string>
    <string name="geofence_transition_invalid_type">Geofence transition error: invalid transition type %1$d</string>
    <string name="geofence_transition_entered">Entered</string>
    <string name="geofence_transition_exited">Exited</string>
    <string name="unknown_geofence_transition">Unknown Transition</string>
    <string name="geofence_transition_notification_text">Click notification to return to app</string>
</resources>