<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:background="@drawable/app_res_bg_reminder"
    android:layout_gravity="center"
    android:padding="10dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_horizontal">

        <TextView
            android:id="@+id/date"
            android:layout_width="200dp"
            android:layout_height="match_parent"
            android:gravity="center"
            android:textColor="@color/black"
            android:hint="@string/date_and_time"
            android:layout_gravity="center"/>
        <ImageButton
            android:id="@+id/selectDate"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:gravity="end"
            android:background="@drawable/app_res_bg_reminder_date"
            android:src="@drawable/ic_access_time_white_24"/>

    </LinearLayout>

    <EditText
        android:id="@+id/message"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:layout_gravity="center"
        android:hint="@string/message"
        android:gravity="center"/>

    <Button
        android:id="@+id/addButton"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:layout_marginTop="20dp"
        android:theme="@style/Button.Green"
        android:background="@drawable/app_res_bg_rounded_corners"
        android:text="@string/add_reminder"
        android:layout_gravity="center_horizontal" />

</LinearLayout>