<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/good_night_img"
    tools:context=".LoginActivity"
    android:id="@+id/containerlogin">

    <TextView
        android:id="@+id/tv_time_login_msg"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="80dp"
        android:layout_marginEnd="8dp"
        android:fontFamily="@font/gotham"
        android:text="@string/good_morning"
        android:textAppearance="@style/TextAppearance.AppCompat.Display1"
        android:textColor="#ffffff"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <Button
        android:id="@+id/btn_login_signup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:background="@drawable/bg_button_white"
        android:theme="@style/Button.White"
        android:text="@string/sign_up"
        android:textColor="@color/purple_700"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/btn_login_signin"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/TextIL_login_password"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/btn_login_signin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:background="@drawable/bg_button_white"
        android:theme="@style/Button.Black"
        android:text="@string/sign_in"
        android:textColor="@color/purple_200"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/btn_login_signup"
        app:layout_constraintTop_toBottomOf="@+id/TextIL_login_password"
        app:layout_constraintVertical_bias="0.0" />


    <ImageButton
        android:id="@+id/btn_login_biometric_signin"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_marginStart="8dp"
        android:layout_marginBottom="8dp"
        android:padding="10dp"
        android:background="@drawable/bg_button_white"
        android:scaleType="fitXY"
        android:src="@drawable/ic_fingerprint_white_24"
        android:textColor="#ffffff"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_login_signin" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/TextIL_login_username"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="20dp"
        android:theme="@style/myEditTextStyle"
        android:textColorHint="@color/purple_500"
        app:counterEnabled="true"
        app:counterMaxLength="12"
        app:endIconMode="clear_text"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_time_login_msg"
        app:layout_constraintVertical_bias="0.32"
        app:startIconDrawable="@drawable/ic_account_circle_white_24">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/ET_login_username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingEnd="50dp"
            android:hint="@string/username"
            android:textColor="@color/purple_500"
            android:inputType="text" />

    </com.google.android.material.textfield.TextInputLayout>


    <LinearLayout
        android:id="@+id/layout_switch_autofill"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="10dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:background="@drawable/bg_button_white"
        app:layout_constraintTop_toBottomOf="@+id/TextIL_login_username">

        <Switch
            android:id="@+id/switch_autofill"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/autofill_username"
            android:paddingLeft="10dp"
            android:textColor="@color/grey_200"
            android:theme="@style/mySwitch"/>

    </LinearLayout>


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/TextIL_login_password"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="10dp"
        android:theme="@style/myEditTextStyle"
        android:textColorHint="@color/purple_500"
        app:endIconMode="password_toggle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/layout_switch_autofill"
        app:startIconDrawable="@drawable/ic_lock_white_24">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/ET_login_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingEnd="50dp"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:textColor="@color/purple_500" />

    </com.google.android.material.textfield.TextInputLayout>


</androidx.constraintlayout.widget.ConstraintLayout>