<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    tools:context=".AddReminderActivity">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:background="@drawable/app_res_bg_add_reminder"
        android:orientation="vertical"
        android:padding="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/picture"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:textColor="@color/black" />

            <ImageButton
                android:id="@+id/selectPicture"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:background="@drawable/app_res_bg_reminder_date"
                android:gravity="end"
                android:src="@drawable/ic_add_a_photo_white_24" />

        </LinearLayout>



        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:orientation="horizontal"
            android:layout_marginTop="30dp">

            <TextView
                android:id="@+id/date"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:hint="@string/date_and_time"
                android:textColor="@color/black" />

            <ImageButton
                android:id="@+id/selectDate"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:background="@drawable/app_res_bg_reminder_date"
                android:gravity="end"
                android:src="@drawable/ic_access_time_white_24" />

        </LinearLayout>


        <LinearLayout
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:orientation="horizontal"
            android:layout_marginTop="30dp">


            <EditText
                android:id="@+id/message"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:hint="@string/message"
                android:inputType="text"
                android:textColor="@color/black" />


            <ImageView
                android:id="@+id/speechtotext"
                android:padding="6dp"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:background="@drawable/app_res_bg_reminder_date"
                android:src="@drawable/ic_keyboard_voice_white_24" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:orientation="horizontal"
            android:layout_marginTop="30dp">


            <EditText
                android:id="@+id/ET_location_x"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_gravity="center"
                android:gravity="center"
                android:hint="X"
                android:inputType="numberDecimal"
                android:textColor="@color/black" />


            <EditText
                android:id="@+id/ET_location_y"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_gravity="center"
                android:gravity="center"
                android:hint="Y"
                android:inputType="numberDecimal"
                android:textColor="@color/black" />

        </LinearLayout>

        <Switch
            android:id="@+id/switch_add_notification"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/add_notification"
            android:layout_marginTop="10dp"
            android:paddingLeft="10dp"
            android:textColor="@color/grey_200"/>

        <Switch
            android:id="@+id/every_day_notification"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/every_day_notification"
            android:layout_marginTop="10dp"
            android:paddingLeft="10dp"
            android:textColor="@color/grey_200"/>


        <Button
            android:id="@+id/addButton"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="20dp"
            android:background="@drawable/app_res_bg_rounded_corners"
            android:text="@string/add_reminder"
            android:theme="@style/Button.Green" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>