<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="405dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="350dp"
            android:background="@color/purple_700"
            android:orientation="vertical"
            android:gravity="center_vertical">

            <ImageButton
                android:id="@+id/profilePicture"
                android:layout_width="200dp"
                android:layout_height="200dp"
                android:layout_gravity="center_horizontal"
                android:background="@android:color/transparent"
                android:scaleType="centerCrop"
                android:src="@drawable/ic_add_a_photo_white_24" />


        </LinearLayout>

        <androidx.cardview.widget.CardView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="20dp"
            app:cardBackgroundColor="@android:color/transparent">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/app_res_bg_rounded_corners"
                android:gravity="center"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginRight="10dp"
                    android:text="@string/number_of_reminders"
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/total_number_of_reminders"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:text="666"
                    android:textColor="@color/purple_700"
                    android:textSize="16sp"
                    android:textStyle="bold" />

            </LinearLayout>

        </androidx.cardview.widget.CardView>
    </RelativeLayout>

    <LinearLayout
        android:id="@+id/test"
        android:layout_width="360dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_gravity="center"
        android:layout_marginTop="5dp">


        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="5dp"
            android:theme="@style/myEditTextStyle"
            android:textColorHint="@color/purple_500"
            app:counterEnabled="true"
            app:counterMaxLength="12"
            app:endIconMode="clear_text"
            app:startIconDrawable="@drawable/ic_account_circle_white_24">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/usernameEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingEnd="50dp"
                android:textColor="@color/purple_500"
                android:inputType="text" />

        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:theme="@style/myEditTextStyle"
            android:textColorHint="@color/purple_500"
            app:endIconMode="password_toggle"
            app:startIconDrawable="@drawable/ic_lock_white_24">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/passwordEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingEnd="50dp"
                android:inputType="textPassword"
                android:textColor="@color/purple_500" />

        </com.google.android.material.textfield.TextInputLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="10dp"
        android:gravity="center_horizontal|bottom"
        android:orientation="vertical"
        android:padding="5dp">

        <Button
            android:id="@+id/saveDataButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:background="@drawable/app_res_bg_rounded_corners"
            android:theme="@style/Button.Green"
            android:text="@string/mettre_jour_les_donn_es" />

        <Button
            android:id="@+id/signOutButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:background="@drawable/app_res_bg_rounded_corners"
            android:theme="@style/Button.Yellow"
            android:text="@string/log_out" />

        <Button
            android:id="@+id/deleteButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/app_res_bg_rounded_corners"
            android:theme="@style/Button.Red"
            android:text="@string/delete_account" />
    </LinearLayout>

</LinearLayout>